[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[project]
name = "repolens"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "gitpython>=3.1.46",
    "langchain>=1.2.12",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.20",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.42.0",
]
